deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lendhub
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: platform-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts: [lendhub.example.org, lendhub-api.example.org]
      secretName: lendhub-tls
  rules:
    - host: lendhub.example.org
      http:
        paths: [{ path: /, pathType: Prefix, backend: { service: { name: lendhub-web, port: { name: http } } } }]
    - host: lendhub-api.example.org
      http:
        paths: [{ path: /, pathType: Prefix, backend: { service: { name: lendhub-api, port: { name: http } } } }]
